# GRPC-RPP-Chat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
grpc/chat/: CMakeLists.txt  chat.proto  client.cpp  common.h  server.cpp
src/: CMakeLists.txt
src/auth_server/: CMakeLists.txt  auth_server.cpp  main.cpp
src/auth_server/app/: CMakeLists.txt
src/auth_server/proto/: auth.proto
src/auth_server/server/: CMakeLists.txt  auth_server.cpp  auth_server.hpp
src/auth_server/server/ut/: auth_server_ut.cpp
src/auth_server/ut/: CMakeLists.txt
src/auth_service/: CMakeLists.txt  auth_service.cpp
src/auth_service/proto/: CMakeLists.txt
src/auth_service/ut/: CMakeLists.txt
src/chat_server/: CMakeLists.txt  chat_server.cpp
src/chat_server/proto/: chat.proto
src/chat_service/: CMakeLists.txt  chat_service.cpp  chat_service.hpp
src/chat_service/proto/: CMakeLists.txt  chat.proto
src/client/: CMakeLists.txt  client.cpp
src/client/app/: CMakeLists.txt  main.cpp
src/client/app_qt/: CMakeLists.txt  main.cpp
src/client/auth_client/: CMakeLists.txt  auth_client.cpp  auth_client.hpp
src/client/chat_client/: CMakeLists.txt  chat_client.cpp  chat_client.hpp
src/client/client_auth/: CMakeLists.txt  client_auth.cpp  client_auth.hpp
src/common/: CMakeLists.txt  common.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/app/: main.cpp
src/server/auth_service/: CMakeLists.txt  auth_service.cpp
src/server/auth_service/ut/: auth_service_ut.cpp
src/server/chat_service/: CMakeLists.txt  chat_service.cpp  chat_service.hpp
src/server/chat_service/proto/: chat.proto
